use window.location function instead of open

--- a/confirmation dailoguebox.html
+++ b/confirmation dailoguebox.html
@@ -6,7 +6,7 @@
 <script type="text/javascript">
 	var a=confirm("Are you ready to visit on twitter?");
 	if (a==true) {
-		open("http://www.twitter.com")
+		window.location="http://www.twitter.com";
 	}
 	else{
 		document.write("The value is false.  You pressed cancel button")
